force-app/main/default/objects/product_info__c/product_info__c.object-meta.xml
<CustomObject>
    <label>product info</label>
    <nameField>
        <label>product info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductInfo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>