force-app/main/default/objects/product_info__c/fields/application_re__c.field-meta.xml
<CustomField>
    <fullName>application_re__c</fullName>
    <label>Application_re</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>ProductInfo</relationshipLabel>
    <relationshipName>ProductInfo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>