force-app/main/default/objects/product_info__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability</label>
    <type>Checkbox</type>
</CustomField>