force-app/main/default/objects/product_info__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>ProductFamily</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobiles</fullName>
            </value>
            <value>
                <fullName>Tabs</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>