force-app/main/default/objects/product_info__c/fields/productname__c.field-meta.xml
<CustomField>
    <fullName>productname__c</fullName>
    <label>productcode</label>
    <length>120</length>
    <type>Text</type>
</CustomField>