force-app/main/default/objects/product_info__c/fields/salesPrice__c.field-meta.xml
<CustomField>
    <fullName>salesPrice__c</fullName>
    <label>salesPrice</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>