force-app/main/default/objects/product_info__c/fields/unitprice__c.field-meta.xml
<CustomField>
    <fullName>unitprice__c</fullName>
    <label>unitprice</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>